samples/_failures_safe/1761455997_54223a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5477af96.c: In function ‘main’:
./samples/SAFE/__tmp_5477af96.c:158:20: error: missing terminating " character
  158 |             printf("Invalid edge parameters. Source and destination must
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5477af96.c:158:13: error: expected expression at end of input
  158 |             printf("Invalid edge parameters. Source and destination must
      |             ^~~~~~
./samples/SAFE/__tmp_5477af96.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5477af96.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5477af96.c:158:13: error: expected declaration or statement at end of input
